--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -29,7 +29,7 @@ body {
     background-color: $clr-neutral-100;
 
     /*demo only*/
-    min-height: 100vh;
+    min-height: 100dvh;
     display: grid;
     place-content: center;
 }
